[package]
name = "cstr_core"
version = "0.2.5"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
description = "Implementation of CStr and CString for no_std environments."
documentation = "https://docs.rs/cstr_core/"
license = "Apache-2.0/MIT"
repository = "https://github.com/Amanieu/cstr_core"
readme = "README.md"
keywords = ["cstr", "cstring", "no_std", "string", "c"]
categories = ["data-structures", "no-std"]
edition = "2018"

[dependencies]
cty = "0.2.1"
memchr = { version = "2.3.3", default-features = false }

[features]
default = ["arc", "alloc"]
alloc = []
std = []
arc = []
nightly = []
use_libc = ["memchr/libc"]
